force-app/main/default/objects/CPQ_Sales_Survey__c/CPQ_Sales_Survey__c.object-meta.xml
<CustomObject>
    <label>Sales Survey</label>
    <nameField>
        <displayFormat>SS-{000}</displayFormat>
        <label>Sales Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>