force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Accounting_Interface__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Interface__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting Interface</label>
    <type>Checkbox</type>
</CustomField>