force-app/main/default/objects/CPQ_Sales_Survey__c/fields/AcountId__c.field-meta.xml
<CustomField>
    <fullName>AcountId__c</fullName>
    <formula>Salesforce_Quote_Id__r.SBQQ__Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AcountId</label>
    <type>Text</type>
</CustomField>