force-app/main/default/objects/CPQ_Sales_Survey__c/fields/AE_Salesforce_Quote__c.field-meta.xml
<CustomField>
    <fullName>AE_Salesforce_Quote__c</fullName>
    <label>AE Salesforce Quote #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>