force-app/main/default/objects/CPQ_Sales_Survey__c/fields/AOO_DO_Conversion__c.field-meta.xml
<CustomField>
    <fullName>AOO_DO_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOO/DO Conversion</label>
    <type>Checkbox</type>
</CustomField>