force-app/main/default/objects/CPQ_Sales_Survey__c/fields/CFCValues__c.field-meta.xml
<CustomField>
    <fullName>CFCValues__c</fullName>
    <label>CFC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Refresh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>