force-app/main/default/objects/CPQ_Sales_Survey__c/fields/CMCSecureAccess__c.field-meta.xml
<CustomField>
    <fullName>CMCSecureAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMC Secure Access</label>
    <type>Checkbox</type>
</CustomField>