force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Consumer_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer Marketing</label>
    <type>Checkbox</type>
</CustomField>