force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Copy_of_DB__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_DB__c</fullName>
    <label>Copy of DB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>