force-app/main/default/objects/CPQ_Sales_Survey__c/fields/CSO2__c.field-meta.xml
<CustomField>
    <fullName>CSO2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSO2</label>
    <type>Checkbox</type>
</CustomField>