force-app/main/default/objects/CPQ_Sales_Survey__c/fields/CustomerProvidedHWSelection__c.field-meta.xml
<CustomField>
    <fullName>CustomerProvidedHWSelection__c</fullName>
    <formula>IF(Server__c, &quot;Server;&quot;, &quot;&quot;)+ IF(NCR_Terminals__c, &quot;NCR Terminals;&quot;,&quot;&quot;) + IF(Non_NCR_Terminals__c, &quot;NON NCR Terminals;&quot;,&quot;&quot;) + IF(iPads_Tablets__c
, &quot;Ipads;&quot;,&quot;&quot;)+ IF(Printers__c, &quot;Printers;&quot;,&quot;&quot;) + IF(Firewall__c, &quot;Firewall;&quot;,&quot;&quot;) + IF(Cash_Drawers__c, &quot;Cash Drawers;&quot;,&quot;&quot;) + IF(Monitor__c,&quot;Monitor;&quot;,&quot;&quot;)+IF(BOH_Printer__c,&quot;BOH Printer;&quot;,&quot;&quot;)+IF(Keyboard_Mouse__c,&quot;Keyboard/Mouse;&quot;,&quot;&quot;)+IF(Hardware_Tested__c,&quot;Hardware Tested;&quot;,&quot;&quot;)+IF(ISnull(Image_Creation_Hours_Sold__c ),TEXT(Image_Creation_Hours_Sold__c) ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerProvidedHWSelection</label>
    <type>Text</type>
</CustomField>