force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Cutover_Existing__c.field-meta.xml
<CustomField>
    <fullName>Cutover_Existing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cutover/Existing</label>
    <type>Checkbox</type>
</CustomField>