force-app/main/default/objects/CPQ_Sales_Survey__c/fields/DeliverToSite1__c.field-meta.xml
<CustomField>
    <fullName>DeliverToSite1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DeliverToSite</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Surveys</relationshipLabel>
    <relationshipName>Sales_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>