force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Enterprise_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Entity_Name__c</fullName>
    <label>Enterprise Entity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>