force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Essential_Add_On_Solution__c.field-meta.xml
<CustomField>
    <fullName>Essential_Add_On_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Essential: Add-On Solution</label>
    <type>Checkbox</type>
</CustomField>