force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Essential_Other__c.field-meta.xml
<CustomField>
    <fullName>Essential_Other__c</fullName>
    <label>Essential_Other(depricated)</label>
    <type>TextArea</type>
</CustomField>