force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Essential_OtherWithIncreaseLength__c.field-meta.xml
<CustomField>
    <fullName>Essential_OtherWithIncreaseLength__c</fullName>
    <label>Essential Others</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>