force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Essential_Refresh_w_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Essential_Refresh_w_Add_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Essential: Refresh w/ Add On</label>
    <type>Checkbox</type>
</CustomField>