force-app/main/default/objects/CPQ_Sales_Survey__c/fields/EssentialProductsSelections__c.field-meta.xml
<CustomField>
    <fullName>EssentialProductsSelections__c</fullName>
    <formula>IF( EssentialsNotInstalled_MobilePay__c , &quot;Mobile Pay;&quot;, &quot;&quot;) + IF(CMCSecureAccess__c, &quot;CMC/Secure Access;&quot;,&quot;&quot;) + IF(EssentialsNotInstalled_ASV__c, &quot;ASV;&quot;,&quot;&quot;) + IF(EssentialsNotInstalled_AOO__c, &quot;Digital Ordering;&quot;,&quot;&quot;)+ IF(CFC__c, &quot;CFC;&quot;,&quot;&quot;) + IF(EssentialsNotInstalled_Pulse__c, &quot;Pulse;&quot;,&quot;&quot;) + IF(EssentialsNotInstalled_Insight__c, &quot;Insight;&quot;,&quot;&quot;) + IF(Consumer_Marketing__c, &quot;Consumer Marketing;&quot;,&quot;&quot;) + IF(All_Products_installed__c, &quot;All Products to be Installed;&quot;,&quot;&quot;)+IF(EssentialsNotInstalled_BSP_APIs__c, &quot;BSP APIs;&quot;,&quot;&quot;) + Essential_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Essentials Products that will NOT instal</label>
    <type>Text</type>
</CustomField>