force-app/main/default/objects/CPQ_Sales_Survey__c/fields/EssentialsNotInstalled_Insight__c.field-meta.xml
<CustomField>
    <fullName>EssentialsNotInstalled_Insight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insight</label>
    <type>Checkbox</type>
</CustomField>