force-app/main/default/objects/CPQ_Sales_Survey__c/fields/EssentialsNotInstalled_NPG__c.field-meta.xml
<CustomField>
    <fullName>EssentialsNotInstalled_NPG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPG</label>
    <type>Checkbox</type>
</CustomField>