force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Existing_Aloha_Key__c.field-meta.xml
<CustomField>
    <fullName>Existing_Aloha_Key__c</fullName>
    <label>Existing Aloha Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>