force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Existing_App_Consumer_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Existing_App_Consumer_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing App Consumer Marketing</label>
    <type>Checkbox</type>
</CustomField>