force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Existing_CFC__c.field-meta.xml
<CustomField>
    <fullName>Existing_CFC__c</fullName>
    <label>Existing CFC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>