force-app/main/default/objects/CPQ_Sales_Survey__c/fields/ExistingApplications_ASV__c.field-meta.xml
<CustomField>
    <fullName>ExistingApplications_ASV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASV</label>
    <type>Checkbox</type>
</CustomField>