force-app/main/default/objects/CPQ_Sales_Survey__c/fields/ExistingApplications_BSP_APIs__c.field-meta.xml
<CustomField>
    <fullName>ExistingApplications_BSP_APIs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BSP APIs</label>
    <type>Checkbox</type>
</CustomField>