force-app/main/default/objects/CPQ_Sales_Survey__c/fields/ExistingApplications_Command_Center__c.field-meta.xml
<CustomField>
    <fullName>ExistingApplications_Command_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Command Center</label>
    <type>Checkbox</type>
</CustomField>