force-app/main/default/objects/CPQ_Sales_Survey__c/fields/FUA__c.field-meta.xml
<CustomField>
    <fullName>FUA__c</fullName>
    <label>FUA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>