force-app/main/default/objects/CPQ_Sales_Survey__c/fields/HardwareNotes_OtherWithIncLength__c.field-meta.xml
<CustomField>
    <fullName>HardwareNotes_OtherWithIncLength__c</fullName>
    <label>HardwareNotes Other</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>