force-app/main/default/objects/CPQ_Sales_Survey__c/fields/IF_NOT_NPP_Why__c.field-meta.xml
<CustomField>
    <fullName>IF_NOT_NPP_Why__c</fullName>
    <label>IF_NOT_NPP_Why(Deprecated)</label>
    <type>TextArea</type>
</CustomField>