force-app/main/default/objects/CPQ_Sales_Survey__c/fields/IF_NOT_NPP_WhyWithIncLength__c.field-meta.xml
<CustomField>
    <fullName>IF_NOT_NPP_WhyWithIncLength__c</fullName>
    <label>IF NOT NPP Why</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>