force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Image_Creation_Hours_Sold__c.field-meta.xml
<CustomField>
    <fullName>Image_Creation_Hours_Sold__c</fullName>
    <label>Image Creation Hours Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>