force-app/main/default/objects/CPQ_Sales_Survey__c/fields/iPads_Tablets__c.field-meta.xml
<CustomField>
    <fullName>iPads_Tablets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iPads/Tablets</label>
    <type>Checkbox</type>
</CustomField>