force-app/main/default/objects/CPQ_Sales_Survey__c/fields/isFinish__c.field-meta.xml
<CustomField>
    <fullName>isFinish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFinish</label>
    <type>Checkbox</type>
</CustomField>