force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Keyboard_Mouse__c.field-meta.xml
<CustomField>
    <fullName>Keyboard_Mouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keyboard/Mouse</label>
    <type>Checkbox</type>
</CustomField>