force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDC</fullName>
            </value>
            <value>
                <fullName>NCR Payments Gateway (CP)</fullName>
            </value>
            <value>
                <fullName>Other (option)</fullName>
            </value>
            <value>
                <fullName>NCR Processing</fullName>
                <isActive>false</isActive>
                <label>NCR Processing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>