force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Multi_Unit__c.field-meta.xml
<CustomField>
    <fullName>Multi_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Unit</label>
    <type>Checkbox</type>
</CustomField>