force-app/main/default/objects/CPQ_Sales_Survey__c/fields/NBO__c.field-meta.xml
<CustomField>
    <fullName>NBO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NBO</label>
    <type>Checkbox</type>
</CustomField>