force-app/main/default/objects/CPQ_Sales_Survey__c/fields/NCR_Digital_Ordering__c.field-meta.xml
<CustomField>
    <fullName>NCR_Digital_Ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCR Online ordering and Digital Ordering</label>
    <type>Checkbox</type>
</CustomField>