force-app/main/default/objects/CPQ_Sales_Survey__c/fields/NetSuite_Quote__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Quote__c</fullName>
    <label>NetSuite Quote #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>