force-app/main/default/objects/CPQ_Sales_Survey__c/fields/NPP_Processor_Options__c.field-meta.xml
<CustomField>
    <fullName>NPP_Processor_Options__c</fullName>
    <label>NPP Processor Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDC processor change only</fullName>
            </value>
            <value>
                <fullName>EDC processor change 1st, then converting to Connected Payments 2nd</fullName>
            </value>
            <value>
                <fullName>Connected payments processor change only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>