force-app/main/default/objects/CPQ_Sales_Survey__c/fields/NSS_Type__c.field-meta.xml
<CustomField>
    <fullName>NSS_Type__c</fullName>
    <label>NSS_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>NSS w/Guest WiFi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>