force-app/main/default/objects/CPQ_Sales_Survey__c/fields/OfUnits__c.field-meta.xml
<CustomField>
    <fullName>OfUnits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>#OfUnits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>