force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <label>Opportunity Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>