force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Pays_Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Pays_Travel_Type__c</fullName>
    <label>Pays Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Pays Travel</fullName>
            </value>
            <value>
                <fullName>NCR Pays travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>