force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Phased_Install__c.field-meta.xml
<CustomField>
    <fullName>Phased_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phased Install</label>
    <type>Checkbox</type>
</CustomField>