force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BDMS/Carlton</fullName>
            </value>
            <value>
                <fullName>Evalon</fullName>
            </value>
            <value>
                <fullName>FDMS/BAMS</fullName>
            </value>
            <value>
                <fullName>FDMS/RKI</fullName>
            </value>
            <value>
                <fullName>FDMS/Wells Fargo</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>FSMS/HSBC</fullName>
            </value>
            <value>
                <fullName>GDMS/Bank of Butterfield</fullName>
            </value>
            <value>
                <fullName>NCR Processing</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vantiv</fullName>
            </value>
            <value>
                <fullName>World Pay</fullName>
            </value>
            <value>
                <fullName>BA Merchant Services</fullName>
            </value>
            <value>
                <fullName>CardSmith</fullName>
            </value>
            <value>
                <fullName>CES</fullName>
            </value>
            <value>
                <fullName>Comdata</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>FDC</fullName>
            </value>
            <value>
                <fullName>FDS Bypass</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>Paymentech</fullName>
            </value>
            <value>
                <fullName>Vantiv Enhanced Host Capture</fullName>
            </value>
            <value>
                <fullName>Vantiv Terminal Capture</fullName>
            </value>
            <value>
                <fullName>Visa Net</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>