force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <formula>Salesforce_Quote_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>