force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Restaurant_Guard__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Guard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restaurant Guard</label>
    <type>Checkbox</type>
</CustomField>