force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>60</length>
    <type>Text</type>
</CustomField>