force-app/main/default/objects/CPQ_Sales_Survey__c/fields/SMB_Consulting_Notes__c.field-meta.xml
<CustomField>
    <fullName>SMB_Consulting_Notes__c</fullName>
    <label>SMB Consulting Notes(deprecated )</label>
    <type>TextArea</type>
</CustomField>