force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Target_Install__c.field-meta.xml
<CustomField>
    <fullName>Target_Install__c</fullName>
    <label>Target Install</label>
    <type>Date</type>
</CustomField>