force-app/main/default/objects/CPQ_Sales_Survey__c/fields/Wall_Mount_Term__c.field-meta.xml
<CustomField>
    <fullName>Wall_Mount_Term__c</fullName>
    <label># Wall Mount Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>